kubernetes/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
  labels:
    app: vaultwarden
spec:
  selector:
    app: vaultwarden
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: ws
    port: 3012
    targetPort: ws
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.2.135
  type: LoadBalancer
